Exclude Swift 5.1 and 5.2

--- a/.github/workflows/push-nonmaster.yml
+++ b/.github/workflows/push-nonmaster.yml
@@ -17,8 +17,14 @@ jobs:
             swift: "4.2"
           - os: macos-10.15
             swift: "4.2"
+          - os: macos-latest
+            swift: "5.1"
           - os: macos-10.15
             swift: "5.1"
+          - os: macos-latest
+            swift: "5.2"
+          - os: macos-10.15
+            swift: "5.2"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
