--- a/.github/workflows/push-nonmaster.yml
+++ b/.github/workflows/push-nonmaster.yml
@@ -18,6 +18,8 @@ jobs:
           - os: macos-10.15
             swift: "4.2"
           - os: macos-latest
+            swift: "5.0"
+          - os: macos-latest
             swift: "5.1"
           - os: macos-10.15
             swift: "5.1"
