--- a/.github/workflows/push-nonmaster.yml
+++ b/.github/workflows/push-nonmaster.yml
@@ -27,6 +27,8 @@ jobs:
             swift: "5.2"
           - os: macos-10.15
             swift: "5.2"
+          - os: macos-latest
+            swift: "5.4"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
