--- a/.github/workflows/push-nonmaster.yml
+++ b/.github/workflows/push-nonmaster.yml
@@ -9,6 +9,7 @@ jobs:
   test:
     name: Test Swift ${{ matrix.swift }}.x on ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-10.15, macos-latest, ubuntu-18.04, ubuntu-latest]
         swift: ["4.2", "5.0", "5.1", "5.2", "5.3", "5.4", "5.5"]
