--- a/.github/workflows/push-nonmaster.yml
+++ b/.github/workflows/push-nonmaster.yml
@@ -11,37 +11,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-10.15, macos-latest, ubuntu-18.04, ubuntu-latest]
-        swift: ["4.2", "5.0", "5.1", "5.2", "5.3", "5.4", "5.5"]
-        exclude:
-          - os: macos-10.15
-            swift: "4.2"
-          - os: macos-10.15
-            swift: "5.1"
-          - os: macos-10.15
-            swift: "5.2"
-          - os: macos-latest
-            swift: "4.2"
-          - os: macos-latest
-            swift: "5.0"
-          - os: macos-latest
-            swift: "5.1"
-          - os: macos-latest
-            swift: "5.2"
-          - os: macos-latest
-            swift: "5.3"
-          - os: macos-latest
-            swift: "5.4"
-          - os: ubuntu-latest
-            swift: "4.2"
-          - os: ubuntu-latest
-            swift: "5.0"
-          - os: ubuntu-latest
-            swift: "5.1"
+        os: [macos-latest, ubuntu-latest]
+        swift: ["4.2", "5.0", "5.1", "5.2", "5.3", "5.4", "5.5", "5.6", "5.7", "5.8", "5.9"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: fwal/setup-swift@v1
+      - uses: swift-actions/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift }}
       - run: swift --version
